# PhysicSim

./: .gitignore  Doxyfile
docs/: README.md  Structure
src/: CMakeLists.txt  Makefile  config.json  glad.c  log.txt  main.cpp
src/core/: Configurator.h  Constants.h  Globals.h  Registry.h  StdIncludes.h  SystemMonitor.h  Timer.h
src/graphics/: CircleRenderer.cpp  CircleRenderer.h  GraphicsModule.h  IRenderer.h  Render.h  Shader.h  Window.h
src/include/glad/: glad.h
src/math/: Math.h  Math.tpp
src/physics/: Physics.h  Physics.tpp
src/space/: Newtonian.cpp  Newtonian.h  Relativistic.cpp  Relativistic.h  Space.h
src/universe/: ISimulationStep.h  IUniverse.h  PipelineUniverse.cpp  PipelineUniverse.h  StandardUniverse.cpp  StandardUniverse.h
src/universe/steps/: EulerStep.cpp  MergingStep.cpp  RK4Step.cpp  TrailStep.cpp
